@@ -1,74 +1,181 @@
 package com.lahiru.ims.feature.inventory.asset.mobile.impl;
 
 
+import com.lahiru.ims.common.GenericDao;
 import com.lahiru.ims.common.dto.PaginationResponse;
-import com.lahiru.ims.common.dto.feature.AssetRequestDto;
 import com.lahiru.ims.common.dto.feature.AssetResponseDto;
+import com.lahiru.ims.common.enums.AssetType;
+import com.lahiru.ims.exception.NotFoundException;
 import com.lahiru.ims.feature.inventory.asset.mobile.Mobile;
+import com.lahiru.ims.feature.inventory.asset.mobile.MobileRepo;
 import com.lahiru.ims.feature.inventory.asset.mobile.MobileService;
 import com.lahiru.ims.feature.inventory.asset.mobile.dto.MobileAssetRequestDto;
 import com.lahiru.ims.feature.inventory.asset.mobile.dto.MobileAssetResponseDto;
+import com.lahiru.ims.feature.inventory.employee.Employee;
+import com.lahiru.ims.feature.inventory.employee.EmployeeService;
+import com.lahiru.ims.feature.inventory.location.Location;
+import com.lahiru.ims.feature.inventory.location.LocationService;
+import com.lahiru.ims.feature.inventory.manufacturer.Manufacturer;
+import com.lahiru.ims.feature.inventory.manufacturer.ManufacturerService;
+import com.lahiru.ims.feature.inventory.model.Model;
+import com.lahiru.ims.feature.inventory.model.ModelService;
 import com.lahiru.ims.feature.inventory.model.dto.ModelDto;
+import com.lahiru.ims.feature.inventory.status.Status;
+import com.lahiru.ims.feature.inventory.status.StatusService;
 import com.lahiru.ims.feature.inventory.status.dto.StatusDto;
+import com.lahiru.ims.feature.inventory.type.Type;
+import com.lahiru.ims.feature.inventory.type.TypeService;
 import com.lahiru.ims.feature.inventory.type.dto.TypeDto;
+import com.lahiru.ims.feature.inventory.vendor.Vendor;
+import com.lahiru.ims.feature.inventory.vendor.VendorService;
+import lombok.RequiredArgsConstructor;
+import org.modelmapper.ModelMapper;
+import org.modelmapper.PropertyMap;
+import org.modelmapper.TypeToken;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 @Service
+@RequiredArgsConstructor
 public class MobileServiceImpl implements MobileService {
-
+    private final MobileRepo mobileRepo;
+    private final ModelMapper modelMapper;
+    private final ModelService modelService;
+    private final StatusService statusService;
+    private final ManufacturerService manufacturerService;
+    private final TypeService typeService;
+    private final GenericDao genericDao;
+    private final LocationService locationService;
+    private final VendorService vendorService;
+    public static final String MOBILE = "Mobile";
+    public final EmployeeService employeeService;
     @Override
     public Mobile findOne(Integer id) throws Exception {
-        return null;
+        return mobileRepo.findActiveOne(id).orElseThrow(() -> new NotFoundException(MOBILE));
     }
 
     @Override
     public List<ModelDto> getAllModels() throws Exception {
-        return List.of();
+        List<Model> modelList = modelService.getAll(AssetType.MOBILE);
+        List<ModelDto> modelDtoList = modelMapper.map(modelList, new TypeToken<List<ModelDto>>() {
+        }.getType());
+        return (!modelDtoList.isEmpty()) ? modelDtoList : Collections.emptyList();
     }
 
     @Override
     public List<TypeDto> getAllTypes() throws Exception {
-        return List.of();
+        List<Type> typeList = typeService.getAll(AssetType.MOBILE);
+        List<TypeDto> typeDtoList = modelMapper.map(typeList, new TypeToken<List<TypeDto>>() {
+        }.getType());
+        return (!typeDtoList.isEmpty()) ? typeDtoList : Collections.emptyList();
     }
 
     @Override
     public List<StatusDto> getAllStatus() throws Exception {
-        return List.of();
+        List<Type> statusList = typeService.getAll(AssetType.MOBILE);
+        List<StatusDto> statusDtoList = modelMapper.map(statusList, new TypeToken<List<StatusDto>>() {
+        }.getType());
+        return (!statusDtoList.isEmpty()) ? statusDtoList : Collections.emptyList();
     }
 
     @Override
     public PaginationResponse<MobileAssetResponseDto> findByPageWise(int page, int pageSize) throws Exception {
-        return null;
+        Pageable pageable = PageRequest.of(page, pageSize);
+        Page<Mobile> mobilePage = mobileRepo.findAllByPageWise(pageable);
+        try {
+            List<MobileAssetResponseDto> responseDtoList = modelMapper
+                    .map(mobilePage.stream().toList(),
+                            new TypeToken<List<MobileAssetResponseDto>>() {
+                            }.getType());
+            return new PaginationResponse<>(
+                    responseDtoList,
+                    (int) mobilePage.getTotalElements()
+            );
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
     }
 
     @Override
     public List<MobileAssetResponseDto> findAll() throws Exception {
-        return List.of();
+        List<Mobile> activeMobile = mobileRepo.findAllActive();
+        List<MobileAssetResponseDto> mobileResponse = modelMapper.map(activeMobile, new TypeToken<List<AssetResponseDto>>() {
+        }.getType());
+        return (!mobileResponse.isEmpty()) ? mobileResponse : Collections.emptyList();
     }
 
     @Override
     public MobileAssetResponseDto createOne(MobileAssetRequestDto mobileAssetRequestDto) throws Exception {
-        return null;
+        Mobile mobile = convertToModel(mobileAssetRequestDto);
+        Mobile saveMobile = mobileRepo.save(mobile);
+        return convertToDto(saveMobile);
     }
 
     @Override
     public MobileAssetResponseDto updateOne(int id, MobileAssetRequestDto mobileAssetRequestDto) throws Exception {
-        return null;
+        Mobile foundMobile = mobileRepo.findActiveOne(id).orElseThrow(() -> new NotFoundException(MOBILE));
+        Mobile updateMobile = convertToModel(mobileAssetRequestDto);
+        updateMobile.setId(foundMobile.getId());
+        Mobile updatedMobile = mobileRepo.saveAndFlush(updateMobile);
+        return convertToDto(updatedMobile);
     }
 
     @Override
     public MobileAssetResponseDto deleteOne(int id) throws Exception {
-        return null;
+        Mobile deleteMobile = mobileRepo.findActiveOne(id).orElseThrow(() -> new NotFoundException(MOBILE));
+        mobileRepo.softDeleteById(deleteMobile.getId());
+        return convertToDto(deleteMobile);
     }
-
     @Override
     public Mobile convertToModel(MobileAssetRequestDto mobileAssetRequestDto) throws Exception {
-        return null;
+        ModelMapper modelMapper1 = new ModelMapper();
+        modelMapper1.addMappings(new PropertyMap<MobileAssetRequestDto, Mobile>() {
+            @Override
+            protected void configure() {
+                skip(destination.getId());
+                skip(destination.getEmployee());
+                skip(destination.getStatus());
+                skip(destination.getModel());
+                skip(destination.getType());
+                skip(destination.getLocation());
+                skip(destination.getManufacturer());
+                skip(destination.getVendor());
+            }
+        });
+        Mobile mobile = modelMapper1.map(mobileAssetRequestDto, Mobile.class);
+        Manufacturer manufacturer = genericDao.checkAndCreate(AssetType.MOBILE, mobileAssetRequestDto.getManufacturer(), manufacturerService);
+        Type type = genericDao.checkAndCreate(AssetType.MOBILE, mobileAssetRequestDto.getType(), typeService);
+        Model model = genericDao.checkAndCreate(AssetType.MOBILE, mobileAssetRequestDto.getModel(), modelService);
+        Status status = statusService.findOne(mobileAssetRequestDto.getStatusId());
+        Location location = locationService.findOne(mobileAssetRequestDto.getLocationId());
+        Employee employee = genericDao.checkAndCreate(mobileAssetRequestDto.getEmployee(), employeeService);
+        Vendor vendor = vendorService.findOne(mobileAssetRequestDto.getVendorId());
+        mobile.setLocation(location);
+        mobile.setManufacturer(manufacturer);
+        mobile.setType(type);
+        mobile.setModel(model);
+        mobile.setEmployee(employee);
+        mobile.setIsActive(true);
+        mobile.setStatus(status);
+        mobile.setVendor(vendor);
+        return mobile;
     }
 
     @Override
     public MobileAssetResponseDto convertToDto(Mobile mobile) throws Exception {
-        return null;
+        try {
+            modelMapper.typeMap(Mobile.class, MobileAssetResponseDto.class).addMappings(mapper -> {
+                mapper.map(src ->
+                        src.getEmployee().getId(), MobileAssetResponseDto::setEmployee
+                );
+            });
+            return modelMapper.map(mobile, MobileAssetResponseDto.class);
+        } catch (Exception e) {
+            throw new Exception(e);
+        }
     }
 }
